refactoring to multi-module project